# linecounter

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: file_opener.rs  lib.rs  lines.rs
