[package]
name = "linecounter"
version = "0.1.0"
authors = ["Picani <picani@laposte.net>"]
edition = "2018"
description = "Count lines (like wc -l) but easier and with compression support"
license = "WTFPL"
categories = ["command-line-utilities", "filesystem"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree_magic_mini = "3"
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
structopt = "0.3"
stybulate = "1"
bzip2 = "0.4"
